@@ -11,6 +11,7 @@ by Alex Rabe & NextGEN DEV Team
 * Bugfix : Sub-Albums in Albums didn't create the correct link 
 * Bugfix : AJAX Pagination didn't work anymore
 * Bugfix : Adding index.php to home_url()
+* Bugfix : Preview picture lost on backend gallery page 2 or higher
 
 = V1.8.2 - 12.07.2011 =
 * Bugfix : Set pagination variables for search result, otherwise update failed
